profile add, absdiff, multiply